Fix promo landing spacing

--- a/assets/styles/promo-landing.less
+++ b/assets/styles/promo-landing.less
@@ -88,8 +88,6 @@
 	font-size: 3em;
 }
 .promo-artist-info {
-	float: left;
-	width: 50%;
 }
 .promo-artist-info img {
 	box-shadow: @drop-9
@@ -108,9 +106,8 @@
 /* -- BECOME A PATRON -- */
 .become-a-patron {
 	width: 500px;
-	float: right;
 	text-align: center;
-	margin: 10px @space-md @space-md @space-sm;
+	margin: 10px @space-md @space-md;
 }
 .become-a-patron p {
 	text-align: left;
